# reinforcement_learning

tictactoe/: main.py  pyproject.toml
tictactoe/src/ttt_rl/: game.py  intelligence.py
tictactoe/tests/: test_observation.py
